--- a/static/style.css
+++ b/static/style.css
@@ -4,6 +4,11 @@
 }
 
 .main {
+  position: absolute;
+  background: #EFEFBB;
+  background: -webkit-linear-gradient(to top, #D4D3DD, #EFEFBB);
+  background: linear-gradient(to top, #D4D3DD, #EFEFBB);
+  justify-content: center;
   display: flex;
   width: 100%;
   height: 100vh;
@@ -11,10 +16,35 @@
 
 .main-gallery {
   display: flex;
+  position: absolute;
+  top: 16%;
   justify-content: center;
-  align-content: center;
-  width: 75%;
-  height: 42.19%;
+  width: 1000px;
+  height: 350px;
+  box-shadow: 3px 5px 8px #6b6b6b;
+}
+
+.btn {
+  background: #ffffff;
+  background: -moz-linear-gradient(top, #ffffff 0%, #e0e0e0 49%, #d3d3d3 100%);
+  background: -webkit-linear-gradient(top, #ffffff 0%, #e0e0e0 49%, #d3d3d3 100%);
+  background: linear-gradient(to bottom, #ffffff 0%, #e0e0e0 49%, #d3d3d3 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#d3d3d3', GradientType=0);
+  border-radius: 3px;
+  padding: 10px;
+  cursor: pointer;
+  border: #6b6b6b;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+  box-shadow: 1px  #6b6b6b;
+}
+
+.btn img {
+  opacity: 1;
+}
+
+.btn img:hover {
+  opacity: 0.3;
 }
 
 .right {
@@ -30,12 +60,21 @@
   background-color: #6b6b6b;
   justify-content: center;
   align-content: center;
+  align-items: center;
   display: flex;
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 
 .showed {
-  max-width: 100%;
-  height: inherit;
+  align-items: baseline;
+  align-self: center;
+  display: flex; 
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+  background-size: cover;
+  align-items: flex-end;
+  border-radius: 8px;
 }
