--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,7 +12,7 @@
           <img src="../assets/arrow.svg" alt="left">
         </button>
         <div class="big-pic">
-          <img class="showed" src=<%= pictures[id].path %> alt="Sad panda">
+          <img class="showed" src=<%= pictures[0].path %> alt="Failed to load picture">
         </div>
         <button class="btn right" type="submit">
           <img src="../assets/arrow.svg" alt="right">
@@ -22,5 +22,6 @@
         <!--small pics-->
       </div>
     </div>
+    <script src="static/script.js"></script>
   </body>
 </html>
