--- a/static/style.css
+++ b/static/style.css
@@ -82,10 +82,15 @@
 #sub-gallery {
   display: flex;
   flex-wrap: wrap;
+  height: 50px;
+  background-color: #ffffff;
 }
 
 .thumbnail {
-  display: flex;
-  width: 10%;
-  height: 8%;
+  width: 100px;
+  height: 50px;
+}
+
+.thumbnail:hover {
+  opacity: 0.7;
 }
